Cannot gather srflx or relay ICE candidates on IPv6 network (ICE agent hangs?) https://bugs.webkit.org/show_bug.cgi?id=181009 <rdar://problem/36144555>

Reviewed by Eric Carlson.

On iOS/IPv6 networks, STUN servers name resolution returns a zero IPv6 IP address.
No error is raised which leads to sending STUN requests with that IP address.
Once the request times out, the ICE candidate gathering finishes with host candidates only.

This patch makes WebRTC DNS resolver to send only IPv4 resolved addresses.
STUN is used for NAT traversal which is for IPv4 addresses.
Not sending IPv6 addresses allows terminating ICE candidate gathering sooner.

Manually tested on iOS with IPv4/IPv6 and IPv6 networks.

* NetworkProcess/webrtc/NetworkRTCResolverCocoa.cpp:
(WebKit::resolvedName):


Canonical link: https://commits.webkit.org/200681@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231235 268f45cc-cd09-0410-ab3c-d52691b4dbfc